WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241532
Non-unified build fixes, pre- Web Engines Hackfest edition
https://bugs.webkit.org/show_bug.cgi?id=241532
Summary
Non-unified build fixes, pre- Web Engines Hackfest edition
Adrian Perez
Reported
2022-06-11 06:06:26 PDT
This will mainly fix build issues introduced by
r295410
(
251416@main
) due to missing headers in the new SystemFontDatabaseGTK.cpp source file.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-06-11 06:39:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1459
EWS
Comment 2
2022-06-11 08:12:39 PDT
Committed
r295474
(
251479@main
): <
https://commits.webkit.org/251479@main
> Reviewed commits have been landed. Closing PR #1459 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-06-11 08:13:13 PDT
<
rdar://problem/94884182
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug