Non-unified build fixes, pre- Web Engines Hackfest edition https://bugs.webkit.org/show_bug.cgi?id=241532

Unreviewed non-unified build fixes.

* Source/WebCore/platform/graphics/filters/FilterResults.cpp: Add
  missing ImageBuffer.h header inclusion.
* Source/WebCore/platform/graphics/gtk/SystemFontDatabaseGTK.cpp: Add
  missing inclusion of headers PlatformScreen.h, <gtk/gtk.h>, and
  wtf/glib/GUniquePtr.h.
* Source/WebKit/NetworkProcess/Cookies/WebCookieManager.cpp: Add missing
  NetworkProcessProxyMessages.h header inclusion.

Canonical link: https://commits.webkit.org/251479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295474 268f45cc-cd09-0410-ab3c-d52691b4dbfc